# sensor_manager_ROS

./: CMakeLists.txt  package.xml
include/: LidarSensor.h  Sensor.h  SensorManager.h  TemperatureSensor.h  UltraSonicSensor.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/sensor_manager_ros/lib/sensor_manager_ros/: sensor_manager_node
install/sensor_manager_ros/share/sensor_manager_ros/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sensor_manager_ros/share/sensor_manager_ros/environment/: ament_prefix_path.sh  path.sh
log/: latest_build
msg/: LidarSummary.msg
src/: LidarSensor.cpp  Sensor.cpp  SensorManager.cpp  TemperatureSensor.cpp  UltraSonicSensor.cpp  main.cpp  sensor_manager_node.cpp
