cmake_minimum_required(VERSION 3.8)
project(sensor_manager_ros)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
"msg/LidarSummary.msg"
DEPENDENCIES builtin_interfaces
)
ament_export_dependencies(rosidl_default_runtime)

#include headers
include_directories(include)

#add executable
add_executable(sensor_manager_node
src/sensor_manager_node.cpp
src/SensorManager.cpp
src/Sensor.cpp
src/UltraSonicSensor.cpp
src/LidarSensor.cpp
src/TemperatureSensor.cpp
)

#link ROS dependencies
ament_target_dependencies(sensor_manager_node rclcpp std_msgs sensor_msgs)

rosidl_get_typesupport_target(cpp_typesupport_target ${PROJECT_NAME} "rosidl_typesupport_cpp")
target_link_libraries(sensor_manager_node "${cpp_typesupport_target}")


#rosidl_target_interfaces(sensor_manager_node ${PROJECT_NAME} "rosidl_typesupport_cpp")

#Install Executable
install(TARGETS
sensor_manager_node 
DESTINATION lib/${PROJECT_NAME})



if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
